--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port = 5000
 spring.datasource.url=jdbc:h2:file:C:/data/patient3
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.initialization-mode=always
+
+
 spring.h2.console.enabled=true
+server.port = 5000
